# lib_qhull

./: .gitignore  CMakeLists.txt
cmake/: PackageConfig.cmake.in  util.cmake
opt/: folders.csv  postprocess.py
src/libqhull/: qhull-exports.def  qhull_p-exports.def
src/libqhull_r/: qhull_r-exports.def
